	* Fix password box focus issue in Firefox
	* Fix plugin uploads from behind a reverse proxy
	* #2010: Move speed text in titlebar to the beginning
	* #1936: Fix Referenced before assignment error in json_api
	* Changes are now applied when clicking OK in Preferences
	* Added Download,Uploaded,Down Limit, Up Limit & Seeder/Peeds columns

==== Console ====
	* #1953: Fix flickering on every update
	* #1954: Fix 'invalid literal for float' when setting listen interface

==== Label ====
	* #1961: Add missing 'All' filter option

==== Notification ====
	* #1905: Fix no email sent to second email address
	* #1898: Fix email notifications not including date/time they were sent

==== Scheduler ====
	* Add plugin page for WebUi

=== Deluge 1.3.3 (22 July 2011) ===
==== Core ====
	* Properly show the 'Checking Resume Data' state instead of just 7
	* #1788: Added ability to use XDG_DOWNLOAD_DIR as default download folder
	* Fix path error with torrent files prefixed with 'file://' from Firefox
	* #1869: Fix setting the disk io read/write to bypass OS cache in Windows
	* #1504: Fix win32 running deluged as not logged in user via runas or service
	* #890: If added torrent already exists, append extra trackers to it
	* #1338: Fix Seeds and Peers totals not updating
	* #1239: Fix translated Tracker Error text not counted in sidebar Error status
	* Fix httpdownloader error with existing filename
	* #1505: Add libtorrent info to version output
	* #1637 Fix UnicodeDecodeError from 'deluge-* --help' with non-english languages
	* #1714 Fix handling of backslashes when renaming files/folders

==== GtkUI ====
	* Show the checking icon for torrents in the 'Checking Resume Data' state
	* #1195: Fix right-click selecting issue when switching between folders and files
	* Add F2 key shortcut for renaming filenames in the Files Tab
	* Increase max piece size to 16 MiB in create torrent dialog
	* #1475: Fix save and restore Preferences dialog size from config